fix nav overlapping signin

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,7 @@
 * {
   -webkit-tap-highlight-color: transparent;
 }
+
+body {
+  overflow-x: hidden;
+}
